--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
     <div class="wrapper">
         <header>
-            <img width="130px" height="90px"src="logo.JPEG" style="position:relative;top:20px;left:30px;">
+            <img width="130px" height="90px"src="logo.jpeg" style="position:relative;top:20px;left:30px;">
             <div class="sidebar">
 
                    <a href="#"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
