--- a/sign.html
+++ b/sign.html
@@ -28,6 +28,9 @@
       <div class="input-field">
         <input type="password" placeholder="Password" autocomplete="password">
     <div class="action">
+      <div class="input-field">
+        <input type="repeat password" placeholder="repeat password" autocomplete="repeat password">
+    <div class="action">
       <button>Sign In</button>
       
     </div>
